# receipts

./: .gitignore  .requestMapper.cpp.swp  CMakeLists.txt  README.md  pref.py  requestMapper.cpp  service.go  setup.py  zeus.service
Odin/include/: odin.hpp
Odin/src/: odin.cpp
RequestMapperAPI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  requestMapper.cpp  requestMapper.hpp
Theia/: image_parser.py  pyserract.py
modules/: CMakeLists.txt
modules/Odin/: CMakeLists.txt
modules/Odin/include/: odin.hpp
modules/Odin/include/Odin/: daemon.hpp  odin.hpp
modules/Odin/src/: daemon.cpp  odin.cpp
modules/Theia/: CMakeLists.txt  README.md
modules/Theia/include/: theia.hpp
modules/Theia/include/Theia/: theia.hpp
modules/Theia/src/: theia.cpp  theia.hpp
modules/app/: CMakeLists.txt
modules/app/src/: app.cpp
receiptSpider/: scrapy.cfg
receiptSpider/receiptSpider/: items.py  middlewares.py  pipelines.py  settings.py
receiptSpider/receiptSpider/spiders/: walmart.py
